<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_main_story"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button_main_practice"
        android:layout_alignEnd="@+id/button_main_practice"
        android:layout_alignLeft="@+id/button_main_practice"
        android:layout_alignRight="@+id/button_main_practice"
        android:layout_marginBottom="10dp"
        android:onClick="startStoryLevelSelectActivity"
        android:text="@string/main_activity_button_story"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_main_practice"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:onClick="startPracticeLevelSelectActivity"
        android:text="@string/main_activity_button_practice"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_main_profile"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/button_main_practice"
        android:layout_alignLeft="@+id/button_main_practice"
        android:layout_alignRight="@+id/button_main_practice"
        android:layout_below="@+id/button_main_practice"
        android:onClick="startProfileActivity"
        android:text="@string/main_activity_button_profile"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/main_activity_textView_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>
