<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PracticeLevelSelectActivity" >

    <Button
        android:id="@+id/button_practice_level_select_return"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="startMainActivity"
        android:text="@string/misc_button_return"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_practice_level_select_level_functions"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_above="@+id/button_practice_level_select_level_integration"
        android:layout_alignLeft="@+id/button_practice_level_select_level_integration"
        android:layout_alignStart="@+id/button_practice_level_select_level_integration"
        android:layout_marginBottom="10dp"
        android:onClick="startPracticeDifficultySelectActivity"
        android:text="@string/practice_level_select_activity_button_level_functions"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_practice_level_select_level_integration"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:onClick="startPracticeDifficultySelectActivity"
        android:text="@string/practice_level_select_activity_button_level_integration"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_practice_level_select_level_limits"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:onClick="startPracticeDifficultySelectActivity"
        android:text="@string/practice_level_select_activity_button_level_limits"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@+id/button_practice_level_select_level_integration"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_practice_level_select_level_differentiation"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_above="@+id/button_practice_level_select_level_functions"
        android:layout_alignEnd="@+id/button_practice_level_select_level_functions"
        android:layout_alignLeft="@+id/button_practice_level_select_level_functions"
        android:layout_alignRight="@+id/button_practice_level_select_level_functions"
        android:layout_alignStart="@+id/button_practice_level_select_level_functions"
        android:layout_marginBottom="10dp"
        android:onClick="startPracticeDifficultySelectActivity"
        android:text="@string/practice_level_select_activity_button_level_differentiation"
        android:textSize="14sp"
        android:textStyle="bold"/>

</RelativeLayout>
