<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView_hint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="20dp"
        android:text="@string/hint_textView_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textView_hint_description"
        style="@style/darkstyle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_hint_title"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/hint_textView_description"
        android:gravity="center" />

    <Button
        android:id="@+id/button_hint_done"
        style="@style/darkbuttonstyle"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_hint_description"
        android:layout_centerHorizontal="true"
        android:text="@string/hint_button_done"/>

</RelativeLayout>