<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".StoryTellerActivity" >

    <Button
        android:id="@+id/button_story_teller_continue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="startQuizActivity"
        android:text="@string/story_teller_activity_button_continue"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_story_teller_return"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="startStoryLevelSelectActivity"
        android:text="@string/misc_button_return"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView_story_teller_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="@string/story_teller_activity_textView_title"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/textView_story_teller_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_story_teller_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView_story_teller_title"
                android:padding="10dp"
                android:text="@string/story_teller_activity_textView_description"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
